# rusty_chess_clock

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: deploy.yml
src/: chess_clock.rs  clock.rs  duration.rs  duration_display.rs  lib.rs  main.rs  run_chess_clock.rs  run_clock.rs  sleep.rs  times.rs  utils.rs
