[package]
name = "rusty_chess_clock"
version = "1.0.0"
edition = "2021"
description = "A simple chess clock implementation in Rust"
authors = ["Michael Bennett <michael.d.a.bennett@outlook.com>"]
license = "MIT"
repository = "https://github.com/michaelbennett99/rusty_chess_clock"
keywords = ["chess", "clock", "game", "timer"]
categories = ["games", "command-line-utilities"]
readme = "README.md"


[dependencies]
iced = { version = "0.12.1", features = ["tokio"], optional = true }
termion = { version = "4.0.2", optional = true }

[lib]
name = "rusty_chess_clock"
path = "src/lib.rs"

[features]
cli = ["termion"]
gui = ["iced"]

[[bin]]
name = "clock_cli"
path = "src/bin/clock_cli.rs"
required-features = ["cli"]

[[bin]]
name = "chess_clock_cli"
path = "src/bin/chess_clock_cli.rs"
required-features = ["cli"]

[[bin]]
name = "chess_clock"
path = "src/bin/chess_clock.rs"
required-features = ["gui"]
